Fix team dashboard: add static fallback data for when API unavailable on static host

--- a/team-dashboard/index.html
+++ b/team-dashboard/index.html
@@ -317,7 +317,49 @@
         currentData = data;
         renderDashboard(data);
       } catch (error) {
-        console.error('Failed to fetch data:', error);
+        // Fallback to static data when API is unavailable (e.g., deployed to static host)
+        const staticData = {
+          stats: { linesOfCode: 14280, files: 43, screens: 23, components: 156, tsErrors: 0, commits: 38, uptime: 9720 },
+          agents: [
+            { name: "Kit", emoji: "⚡", role: "CEO / Orchestrator", status: "working", task: "Orchestrating Sprint 1", model: "claude-opus-4" },
+            { name: "Coder", emoji: "💻", role: "Full-Stack Developer", status: "idle", task: "5 builds shipped — Racing Game, Deal Calculator, Trade Estimator, CSI Survey, Digital Cards", model: "claude-opus-4" },
+            { name: "Researcher", emoji: "🔬", role: "Research & Discovery", status: "idle", task: "4 builds shipped — Master Backlog, GH Landing, Competitive Intel, People Analyzer", model: "claude-opus-4" },
+            { name: "Writer", emoji: "✍️", role: "Content & Docs", status: "idle", task: "4 builds shipped — EOS Framework, Review Responder, L10 Runner, Onboarding", model: "claude-opus-4" },
+            { name: "Analyst", emoji: "📊", role: "Data & Visualization", status: "idle", task: "3 builds shipped — Spin-to-Win, Agent Dashboard, Financial Dashboard, Marketing Tracker", model: "claude-opus-4" },
+            { name: "Ops", emoji: "⚙️", role: "DevOps & Infrastructure", status: "idle", task: "3 builds shipped — Scrum Dashboard, Service Scheduler, Sales Scorecard", model: "claude-opus-4" },
+            { name: "QA", emoji: "🔍", role: "Quality Assurance", status: "idle", task: "Standby — QA-RULES.md established", model: "claude-opus-4" },
+            { name: "Comms", emoji: "📢", role: "Communications", status: "idle", task: "Standby", model: "claude-opus-4" }
+          ],
+          activity: [
+            { time: "9:06 AM", text: "Kit's War Room deployed to kitswarroom.com", agent: "Kit" },
+            { time: "8:43 AM", text: "CULTURE.md pushed to all agent workspaces — mission, values, creator mindset", agent: "Kit" },
+            { time: "8:23 AM", text: "QA-RULES.md created — feedback loop institutionalized (IDS)", agent: "Kit" },
+            { time: "7:36 AM", text: "Digital Business Cards shipped — vCard, QR codes, hash routing", agent: "Coder" },
+            { time: "7:35 AM", text: "Employee Onboarding Checklist shipped — 4-phase wizard", agent: "Writer" },
+            { time: "7:35 AM", text: "Inventory Browser shipped — 45 vehicles, filters, lead capture", agent: "Researcher" },
+            { time: "7:34 AM", text: "⏸️ Jeff paused new jobs — completing in-flight builds", agent: "Kit" },
+            { time: "7:32 AM", text: "Financial P&L Dashboard shipped — 7 departments, store comparison", agent: "Analyst" },
+            { time: "7:31 AM", text: "People Analyzer shipped — GWC grid, The Bar, quarterly review", agent: "Researcher" },
+            { time: "7:30 AM", text: "Trade-In Estimator shipped — 4-step lead gen tool", agent: "Coder" },
+            { time: "7:30 AM", text: "CSI Survey shipped — smart routing happy→review, unhappy→recovery", agent: "Coder" },
+            { time: "7:29 AM", text: "Review Response Generator shipped — 33+ templates, 3 tones", agent: "Writer" },
+            { time: "7:28 AM", text: "Sales Daily Scorecard shipped — store tabs, leaderboard, sparklines", agent: "Ops" },
+            { time: "7:28 AM", text: "Competitive Intel Dashboard shipped — 10 FL competitors profiled", agent: "Researcher" },
+            { time: "7:25 AM", text: "Agent Performance Dashboard shipped — Gantt, burndown, cost tracker", agent: "Analyst" },
+            { time: "7:25 AM", text: "Deal Profit Calculator shipped — front/back gross, OTD, live calcs", agent: "Coder" },
+            { time: "7:24 AM", text: "GH Landing Page shipped — full conversion funnel, market research", agent: "Researcher" },
+            { time: "7:23 AM", text: "Spin-to-Win Lead Capture shipped — prize wheel + lead form", agent: "Analyst" },
+            { time: "7:22 AM", text: "Racing Game V1 shipped — 4 Dyer brand cars, top-down racing", agent: "Coder" },
+            { time: "7:21 AM", text: "Scrum Dashboard shipped — Kanban, IDS, Rocks, activity feed", agent: "Ops" },
+            { time: "7:20 AM", text: "Service Scheduler shipped — 4-step wizard, .ics export", agent: "Ops" },
+            { time: "7:18 AM", text: "L10 Meeting Runner shipped — full EOS format with timers", agent: "Writer" },
+            { time: "7:15 AM", text: "Team EOS Framework shipped — docs/TEAM-EOS.md", agent: "Writer" },
+            { time: "7:12 AM", text: "Master Backlog shipped — 47 items prioritized", agent: "Researcher" },
+            { time: "7:00 AM", text: "🚀 Sprint 1 launched — all agents activated", agent: "Kit" }
+          ]
+        };
+        currentData = staticData;
+        renderDashboard(staticData);
       }
     }
 
