Remove Dyer Auto Group subheader - it's Kit's War Room

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head><script src="auth.js"></script><link rel="stylesheet" href="responsive.css">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kit's War Room — Dyer Auto Group Tools</title>
+<title>Kit's War Room</title>
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 :root{--navy:#1B2A4A;--gold:#C5A55A;--bg:#0D1520;--card:#151F2E;--border:#1E2D42;--text:#D0D8E4;--dim:#6B7A90;--bright:#F0F4F8}
@@ -42,7 +42,7 @@ a.card:hover{border-color:var(--gold);background:var(--navy);transform:translate
 <body>
 <div class="header">
   <h1>⚡ Kit's War Room</h1>
-  <p>Dyer Auto Group — Tools, Dashboards & Apps</p>
+  <p>Tools, Dashboards & Apps</p>
 </div>
 <div class="stats">
   <div class="stat"><div class="num">20</div><div class="label">Products</div></div>
