Switch to permanent Cloudflare tunnel URLs - no more random domains

--- a/agent-dashboard/index.html
+++ b/agent-dashboard/index.html
@@ -203,7 +203,7 @@ tr:hover td{background:rgba(197,165,90,.04)}
 // ============================================================
 // Live API Integration
 // ============================================================
-const LIVE_API_URL = 'https://amp-changelog-commentary-alternatives.trycloudflare.com/api/status';
+const LIVE_API_URL = 'https://dashboard.kitswarroom.com/api/status';
 const LIVE_API_KEY = '689b1f85c91ffc61ef7469ea7b4c75f796a7025848bb3c7c';
 
 const agentColors = {
