--- a/desk-log/index.html
+++ b/desk-log/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html><head>
-<meta http-equiv="refresh" content="0;url=https://vault-trying-maintaining-apparent.trycloudflare.com">
-<title>Desk Log Pro — Blaney's Consulting</title>
+<meta http-equiv="refresh" content="0;url=https://app.kitswarroom.com">
+<title>Revline — Blaney's Consulting</title>
 </head>
 <body style="background:#2B4C7E;color:#fff;font-family:sans-serif;display:flex;align-items:center;justify-content:center;height:100vh;margin:0;">
 <div style="text-align:center">
-<h1>Desk Log Pro</h1>
-<p>Redirecting to Blaney's Consulting Desk Log...</p>
-<p><a href="https://vault-trying-maintaining-apparent.trycloudflare.com" style="color:#fff">Click here if not redirected</a></p>
+<h1>Revline</h1>
+<p>Redirecting...</p>
+<p><a href="https://app.kitswarroom.com" style="color:#fff">Click here if not redirected</a></p>
 </div>
 </body></html>
