--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ a.card:hover{border-color:var(--gold);background:var(--navy);transform:translate
 
 <div class="section"><h2>🚀 Featured Product</h2></div>
 <div class="grid">
-  <a class="card" href="https://vault-trying-maintaining-apparent.trycloudflare.com" style="border-left-color:#FFD700;border-width:2px 2px 2px 5px;background:linear-gradient(135deg,#1a2438,#1B2A4A);"><div class="name">📋 Desk Log Pro — Automotive Deal Tracking</div><div class="desc">Full-stack SaaS application. Track every deal from sale to posted. Role-based access, audit trail, 10 reports, real-time dashboard. Login: admin@dyerauto.com / DyerAdmin2026!</div><div class="meta"><span class="tag type">SaaS Product</span><span class="tag">Full-Stack</span><span class="tag">Live Backend</span></div></a>
+  <a class="card" href="https://app.kitswarroom.com" style="border-left-color:#FFD700;border-width:2px 2px 2px 5px;background:linear-gradient(135deg,#1a2438,#1B2A4A);"><div class="name">📋 Desk Log Pro — Automotive Deal Tracking</div><div class="desc">Full-stack SaaS application. Track every deal from sale to posted. Role-based access, audit trail, 10 reports, real-time dashboard. Login: admin@dyerauto.com / DyerAdmin2026!</div><div class="meta"><span class="tag type">SaaS Product</span><span class="tag">Full-Stack</span><span class="tag">Live Backend</span></div></a>
 </div>
 
 <div class="section"><h2>🎯 Command Center</h2></div>
