--- a/scrum-dashboard/index.html
+++ b/scrum-dashboard/index.html
@@ -632,7 +632,7 @@ function fmtTime(t) {
 // ============================================================
 // Live API Integration
 // ============================================================
-const LIVE_API_URL = 'https://amp-changelog-commentary-alternatives.trycloudflare.com/api/status';
+const LIVE_API_URL = 'https://dashboard.kitswarroom.com/api/status';
 const LIVE_API_KEY = '689b1f85c91ffc61ef7469ea7b4c75f796a7025848bb3c7c';
 
 // Add live indicator
