--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@ a.card:hover{border-color:var(--gold);background:var(--navy);transform:translate
 
 <div class="section"><h2>🚀 Featured Product</h2></div>
 <div class="grid">
-  <a class="card" href="https://app.kitswarroom.com" style="border-left-color:#FFD700;border-width:2px 2px 2px 5px;background:linear-gradient(135deg,#1a2438,#1B2A4A);"><div class="name">📋 Desk Log Pro — Automotive Deal Tracking</div><div class="desc">Full-stack SaaS application. Track every deal from sale to posted. Role-based access, audit trail, 10 reports, real-time dashboard. Login: admin@dyerauto.com / DyerAdmin2026!</div><div class="meta"><span class="tag type">SaaS Product</span><span class="tag">Full-Stack</span><span class="tag">Live Backend</span></div></a>
+  <a class="card" href="https://app.kitswarroom.com" style="border-left-color:#FFD700;border-width:2px 2px 2px 5px;background:linear-gradient(135deg,#1a2438,#1B2A4A);"><div class="name">📋 Revline — Revenue Intelligence for the Modern Dealer</div><div class="desc">Full-stack SaaS platform. Track every deal from order to posted. Sidebar nav, dark/light mode, 10 reports, role-based access, audit trail. Login: admin@dyerauto.com / DyerAdmin2026!</div><div class="meta"><span class="tag type">SaaS Product</span><span class="tag">Full-Stack</span><span class="tag">Live Backend</span></div></a>
 </div>
 
 <div class="section"><h2>🎯 Command Center</h2></div>
 <div class="grid">
-  <a class="card" href="/team-dashboard/" style="border-left-color:#FFD700;border-width:1px 1px 1px 4px;"><div class="name">⚡ Kit's Team Dashboard</div><div class="desc">Live command center — agent status, active tasks, build queue, team metrics. The real-time nerve center.</div><div class="meta"><span class="tag type">Live Dashboard</span><span class="tag">Primary</span></div></a>
+  <a class="card" href="https://dashboard.kitswarroom.com" style="border-left-color:#FFD700;border-width:1px 1px 1px 4px;"><div class="name">⚡ Kit's Team Dashboard</div><div class="desc">Live command center — agent status, active tasks, build queue, team metrics. The real-time nerve center.</div><div class="meta"><span class="tag type">Live Dashboard</span><span class="tag">Primary</span></div></a>
   <a class="card" href="/scrum-dashboard/"><div class="name">📋 Scrum Dashboard</div><div class="desc">Kanban board, team status, IDS log, Q1 Rocks, activity feed. Sprint command center with links to all shipped products.</div><div class="meta"><span class="tag type">Ops</span><span class="tag">Command Center</span></div></a>
   <a class="card" href="/agent-dashboard/"><div class="name">📊 Agent Performance</div><div class="desc">Gantt timeline, sprint burndown chart, cost tracker, agent leaderboard. Real-time team metrics.</div><div class="meta"><span class="tag type">Ops</span><span class="tag">Metrics</span></div></a>
 </div>
