Add Automated Service Point to Featured Products

--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@ a.card:hover{border-color:var(--gold);background:var(--navy);transform:translate
   <div class="stat"><div class="num">7</div><div class="label">AI Agents</div></div>
 </div>
 
-<div class="section"><h2>🚀 Featured Product</h2></div>
+<div class="section"><h2>🚀 Featured Products</h2></div>
 <div class="grid">
   <a class="card" href="https://revlinelog.com" style="border-left-color:#FFD700;border-width:2px 2px 2px 5px;background:linear-gradient(135deg,#1a2438,#1B2A4A);"><div class="name">📋 Revline — Revenue Intelligence for the Modern Dealer</div><div class="desc">Full-stack SaaS platform. Track every deal from order to posted. Sidebar nav, dark/light mode, 10 reports, role-based access, audit trail. Login: admin@dyerauto.com / DyerAdmin2026!</div><div class="meta"><span class="tag type">SaaS Product</span><span class="tag">Full-Stack</span><span class="tag">Live Backend</span></div></a>
+  <a class="card" href="https://kit-builds14.github.io/automated-service-point/" style="border-left-color:#EC1F25;border-width:2px 2px 2px 5px;background:linear-gradient(135deg,#1a1a1a,#2D2D2D);"><div class="name">🔧 Automated Service Point — The Future of Service, Patented</div><div class="desc">AI-powered service pipeline: sensor → diagnose → classify → resolve → parts → work order. US Patent 12,067,048 B1. Covers automotive, aviation, marine, medical equipment, and beyond.</div><div class="meta"><span class="tag type">Patent IP</span><span class="tag">AI Platform</span><span class="tag">Website</span></div></a>
 </div>
 
 <div class="section"><h2>🎯 Command Center</h2></div>
