--- a/team-dashboard/index.html
+++ b/team-dashboard/index.html
@@ -192,7 +192,8 @@ body {
 </div>
 
 <script>
-const API = '/api/status';
+// Use relative path if served from dashboard.kitswarroom.com, otherwise use full URL
+const API = location.hostname.includes('dashboard') ? '/api/status' : 'https://dashboard.kitswarroom.com/api/status';
 const KEY = '689b1f85c91ffc61ef7469ea7b4c75f796a7025848bb3c7c';
 let prevStatuses = {};
 let initialized = false;
@@ -224,14 +225,15 @@ function formatUptime(seconds) {
   return h > 0 ? `${h}h ${m}m` : `${m}m`;
 }
 
-function renderStats(stats) {
+function renderStats(stats, labels) {
+  const l = labels || {};
   const items = [
-    { label: 'Lines of Code', value: stats.linesOfCode, key: 'loc' },
-    { label: 'Files', value: stats.files, key: 'files' },
-    { label: 'Screens', value: stats.screens, key: 'screens' },
-    { label: 'Components', value: stats.components, key: 'comps' },
-    { label: 'Commits', value: stats.commits, key: 'commits' },
-    { label: 'Uptime', value: stats.uptime, key: 'uptime', format: formatUptime },
+    { label: l.linesOfCode || 'Total Tokens', value: stats.linesOfCode, key: 'loc' },
+    { label: l.files || 'Sessions', value: stats.files, key: 'files' },
+    { label: l.screens || 'Agents', value: stats.screens, key: 'screens' },
+    { label: l.components || 'Active Now', value: stats.components, key: 'comps' },
+    { label: l.commits || 'Commits', value: stats.commits, key: 'commits' },
+    { label: l.uptime || 'Uptime', value: stats.uptime, key: 'uptime', format: formatUptime },
   ];
   return `<div class="stats-grid">${items.map((s, i) =>
     `<div class="stat-card"><div class="stat-value" data-key="${s.key}" data-target="${s.value}" data-delay="${i * 100}" data-format="${s.key === 'uptime' ? 'uptime' : ''}">${s.format ? s.format(s.value) : s.value.toLocaleString()}</div><div class="stat-label">${s.label}</div></div>`
@@ -284,7 +286,7 @@ async function fetchData() {
 
     const main = document.getElementById('main');
     const isFirst = !initialized;
-    main.innerHTML = renderStats(data.stats) + renderAgents(data.agents);
+    main.innerHTML = renderStats(data.stats, data.statLabels) + renderAgents(data.agents);
 
     if (isFirst) {
       // Animate stats on first load
