feat: serve scrum + agent dashboards via live tunnel

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ a.card:hover{border-color:var(--gold);background:var(--navy);transform:translate
 <div class="section"><h2>🎯 Command Center</h2></div>
 <div class="grid">
   <a class="card" href="https://dashboard.kitswarroom.com" style="border-left-color:#FFD700;border-width:1px 1px 1px 4px;"><div class="name">⚡ Command Center</div><div class="desc">Live command center — agent status, active tasks, build queue, team metrics. Real-time via Cloudflare Tunnel.</div><div class="meta"><span class="tag type">Live Dashboard</span><span class="tag">Primary</span></div></a>
-  <a class="card" href="/scrum-dashboard/"><div class="name">📋 Scrum Dashboard</div><div class="desc">Kanban board, team status, IDS log, Q1 Rocks, activity feed. Sprint command center with links to all shipped products.</div><div class="meta"><span class="tag type">Ops</span><span class="tag">Command Center</span></div></a>
-  <a class="card" href="/agent-dashboard/"><div class="name">📊 Agent Performance</div><div class="desc">Gantt timeline, sprint burndown chart, cost tracker, agent leaderboard. Real-time team metrics.</div><div class="meta"><span class="tag type">Ops</span><span class="tag">Metrics</span></div></a>
+  <a class="card" href="https://dashboard.kitswarroom.com/scrum-dashboard/"><div class="name">📋 Scrum Dashboard</div><div class="desc">Kanban board, team status, IDS log, Q1 Rocks, activity feed. Sprint command center with links to all shipped products.</div><div class="meta"><span class="tag type">Live Dashboard</span><span class="tag">Command Center</span></div></a>
+  <a class="card" href="https://dashboard.kitswarroom.com/agent-dashboard/"><div class="name">📊 Agent Performance</div><div class="desc">Gantt timeline, sprint burndown chart, cost tracker, agent leaderboard. Real-time team metrics.</div><div class="meta"><span class="tag type">Live Dashboard</span><span class="tag">Metrics</span></div></a>
 </div>
 
 <div class="section"><h2>🎯 Lead Generation & Customer Tools</h2></div>
