feat: valentine's day page + comms lines on command center

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@ a.card:hover{border-color:var(--gold);background:var(--navy);transform:translate
   <div class="stat"><div class="num">7</div><div class="label">AI Agents</div></div>
 </div>
 
+<div class="section"><h2>💝 Valentine's Day</h2></div>
+<div class="grid">
+  <a class="card" href="https://dashboard.kitswarroom.com/valentine/" style="border-left-color:#FF1493;border-width:1px 1px 1px 4px;"><div class="name">💕 Happy Valentine's Day — Blaney & Boaro Families</div><div class="desc">Live Valentine's display with weather for Vero Beach & Long Island, today's schedule (Stuart Fair!), floating hearts, teddy bears, and a KITT scanner. Made with ❤️ by Kit.</div><div class="meta"><span class="tag type">Live Display</span><span class="tag">Family</span></div></a>
+</div>
 <div class="section"><h2>🚀 Featured Products</h2></div>
 <div class="grid">
   <a class="card" href="https://revlinelog.com" style="border-left-color:#FFD700;border-width:2px 2px 2px 5px;background:linear-gradient(135deg,#1a2438,#1B2A4A);"><div class="name">📋 Revline — Revenue Intelligence for the Modern Dealer</div><div class="desc">Full-stack SaaS platform. Track every deal from order to posted. Sidebar nav, dark/light mode, 10 reports, role-based access, audit trail. Login: admin@dyerauto.com / DyerAdmin2026!</div><div class="meta"><span class="tag type">SaaS Product</span><span class="tag">Full-Stack</span><span class="tag">Live Backend</span></div></a>
@@ -62,6 +66,7 @@ a.card:hover{border-color:var(--gold);background:var(--navy);transform:translate
   <a class="card" href="https://dashboard.kitswarroom.com" style="border-left-color:#FFD700;border-width:1px 1px 1px 4px;"><div class="name">⚡ Command Center</div><div class="desc">Live command center — agent status, active tasks, build queue, team metrics. Real-time via Cloudflare Tunnel.</div><div class="meta"><span class="tag type">Live Dashboard</span><span class="tag">Primary</span></div></a>
   <a class="card" href="https://dashboard.kitswarroom.com/scrum-dashboard/"><div class="name">📋 Scrum Dashboard</div><div class="desc">Kanban board, team status, IDS log, Q1 Rocks, activity feed. Sprint command center with links to all shipped products.</div><div class="meta"><span class="tag type">Live Dashboard</span><span class="tag">Command Center</span></div></a>
   <a class="card" href="https://dashboard.kitswarroom.com/agent-dashboard/"><div class="name">📊 Agent Performance</div><div class="desc">Gantt timeline, sprint burndown chart, cost tracker, agent leaderboard. Real-time team metrics.</div><div class="meta"><span class="tag type">Live Dashboard</span><span class="tag">Metrics</span></div></a>
+  <a class="card" href="https://dashboard.kitswarroom.com/valentine/" style="border-left-color:#FF69B4;border-width:1px 1px 1px 4px;"><div class="name">💕 Valentine's Day — Blaney & Boaro Families</div><div class="desc">Happy Valentine's Day! Live weather, today's schedule, floating hearts, and love from Kit. Stuart Fair with the families.</div><div class="meta"><span class="tag type">Special</span><span class="tag">Feb 14</span></div></a>
 </div>
 
 <div class="section"><h2>🎯 Lead Generation & Customer Tools</h2></div>
