--- a/agent-dashboard/index.html
+++ b/agent-dashboard/index.html
@@ -66,7 +66,7 @@ tr:hover td{background:rgba(197,165,90,.04)}
 
 /* Responsive */
 @media(max-width:900px){.grid-4{grid-template-columns:repeat(2,1fr)}.grid-2,.grid-3{grid-template-columns:1fr}}
-@media(max-width:500px){.grid-4{grid-template-columns:1fr}}
+@media(max-width:500px){.grid-4{grid-template-columns:1fr}.stat-card .value{font-size:1.8rem}.stat-card{padding:16px 12px}body{padding:12px}h1{font-size:1.3rem!important}.subtitle{font-size:.75rem}.cost-row{font-size:.78rem;flex-wrap:wrap}.timeline-label{width:60px;font-size:.65rem}}
 </style>
 </head>
 <body>
