fix: dynamic date on agent dashboard, reliable weather API on valentine

--- a/agent-dashboard/index.html
+++ b/agent-dashboard/index.html
@@ -72,7 +72,7 @@ tr:hover td{background:rgba(197,165,90,.04)}
 <body>
 
 <h1>⚡ AGENT PERFORMANCE DASHBOARD</h1>
-<p class="subtitle">Kit's Multi-Agent Team &mdash; February 13, 2026 &mdash; Sprint 4, Day 3</p>
+<p class="subtitle">Kit's Multi-Agent Team &mdash; <script>document.write(new Date().toLocaleDateString('en-US',{month:'long',day:'numeric',year:'numeric',timeZone:'America/New_York'}))</script> &mdash; Sprint 4</p>
 
 <!-- TODAY'S STATS -->
 <div class="grid grid-4">
