--- a/team-dashboard/index.html
+++ b/team-dashboard/index.html
@@ -188,6 +188,7 @@ body::before {
   width: 100%;
   height: 100%;
   pointer-events: none;
+  z-index: 1;
 }
 
 /* ── Nodes Container ── */
@@ -195,6 +196,7 @@ body::before {
   position: relative;
   width: 600px;
   height: 600px;
+  overflow: visible;
 }
 
 /* ── Agent Node ── */
@@ -411,8 +413,9 @@ body::before {
   <!-- Main -->
   <div class="main">
     <div class="constellation">
-      <svg id="constellation-svg"></svg>
-      <div class="nodes-container" id="nodesContainer"></div>
+      <div class="nodes-container" id="nodesContainer">
+        <svg id="constellation-svg"></svg>
+      </div>
     </div>
     <aside class="activity-panel">
       <div class="activity-header">Activity Feed</div>
