--- a/team-dashboard/index.html
+++ b/team-dashboard/index.html
@@ -372,6 +372,8 @@ body::before {
     max-height: 300px;
     border-left: none;
     border-top: 1px solid var(--border);
+    margin-top: 16px;
+    padding-top: 4px;
   }
   .stats-bar { gap: 16px; }
   .stat-sep { display: none; }
